--- a/CoopDEJC/Views/Home/Index.cshtml
+++ b/CoopDEJC/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                         </a>
                     </li>
                     <li>
-                    <a href="@Url.Action("Usertoloans")">
+                    <a href="@Url.Action("Loans","Loans")">
                             <img src="~/img/Loans.svg" /><span>Loans</span>
                         </a>
                     </li>
