--- a/CoopDEJC/Views/Loans/Loans.cshtml
+++ b/CoopDEJC/Views/Loans/Loans.cshtml
@@ -30,7 +30,7 @@
                         </a>
                       </li>
                       <li>
-                    <a href="@Url.Action("Invesment","Invesment")">
+                    <a href="@Url.Action("Investment","Investment")">
                             <img src="~/img/Investment.svg"/><span>Investment</span>
                         </a>
                       </li>
