--- a/CoopDEJC/Views/Home/MyProfile.cshtml
+++ b/CoopDEJC/Views/Home/MyProfile.cshtml
@@ -23,12 +23,12 @@
                         </a>
                      </li>
                       <li>
-                        <a href="#">
+                    <a href="@Url.Action("Loans","Loans")">
                             <img src="~/img/Loans.svg"/><span>Loans</span>
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                    <a href="@Url.Action("Investment","Investment")">
                             <img src="~/img/Investment.svg"/><span>Investment</span>
                         </a>
                       </li>
