--- a/CoopDEJC/Views/Loans/Loans.cshtml
+++ b/CoopDEJC/Views/Loans/Loans.cshtml
@@ -56,7 +56,7 @@
                 <div class="loansBlce">
                     <center>
                         <h4>Total Loans</h4>
-                        <h3>$10,000.00</h3>
+                        <h3>$0</h3>
                         @*<br />*@
                         <h5>**** **** **** 1234</h5>
                     </center>
@@ -196,7 +196,7 @@
                     -->
                     <div class="libtn">
                         <a class="iview" href="@Url.Action("LoansReport", "Loans")" target="_blank">Loans View</a>
-                        <a class="ifee" asp-area="" asp-controller="Loans" asp-action="LoansFeeShow" target="_blank">Investment Fee</a>
+                        <a class="ifee" asp-area="" asp-controller="Loans" asp-action="LoansFeeShow" target="_blank">Loans Fee</a>
                     </div>
                 </div>
             </div>
